tests/syntactic/unterminated_comment/unterminated_comment.err
Error: unterminated comment block, missing '*/' in file unterminated_comment.dl at line 1
/* a
^----
1 errors generated, evaluation aborted
